@@ -1,5 +1,7 @@
 === HEAD
 
+* Add ability set the default for join_table's :qualify option via Dataset#default_join_table_qualification (jeremyevans)
+
 * Deprecate core extension usage if the core_extensions have not been explicitly loaded (jeremyevans)
 
 * Deprecate Symbol#{[],<,<=,>,>=} methods when using the core_extensions (jeremyevans)
